[gd_scene load_steps=4 format=3 uid="uid://bggqbfpjafig2"]

[ext_resource type="Script" path="res://Player/Scripts/BabyGolem.gd" id="1_gqilq"]
[ext_resource type="Texture2D" uid="uid://c7hss1ojutfmy" path="res://Player/Sprites/GolemSprite-0001.png" id="2_8gxdd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27j3a"]
size = Vector2(30, 60)

[node name="BabyGolem" type="RigidBody2D" groups=["PB"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_gqilq")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_27j3a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8gxdd")

[node name="Shoot_Delay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Alive_Duration" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Overlap_Check" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Shoot_Delay" to="." method="_on_shoot_delay_timeout"]
[connection signal="timeout" from="Alive_Duration" to="." method="_on_alive_duration_timeout"]
[connection signal="timeout" from="Overlap_Check" to="." method="_on_overlap_check_timeout"]
